# cozy-snake

./: .gitignore  CMakeLists.txt  CNAME  README.md  index.html  main.js  package.json
server/: index.js  package.json
src/: main.cpp
